# Setupr

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENVREADME.md  README.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml
docs/: COMMANDS.md  FEATURES.md  project-snapshot.md
scripts/: smoke-fixtures.mjs
src/: cli.tsx
src/agent/: aiClient.ts  intelligence.ts  orchestrator.ts  providerDiagnostics.ts  runtime.ts  safety.ts
src/ai/: cache.ts  client.ts  director.ts  directorContext.ts  intelligence.ts  models.ts  planner.ts  retry.ts  setupFlow.ts
src/auth/: secrets.ts
src/cli/: commandRegistry.ts  help.ts  index.ts  launcher.ts  plain.ts  preWarning.ts  terminalScreen.ts  transition.ts
src/components/: App.tsx  ChatInput.tsx  FilesPanel.tsx  MainPanel.tsx  Panel.tsx  StatusPanel.tsx  index.ts  useKeyboardNav.ts
tests/: agent-runtime.test.ts  ai-models.test.ts  auth.test.ts  bounded-text-input.test.ts  chat.test.ts  core-engine.test.ts  dashboard-status.test.ts  deps-intelligence.test.ts  director-context.test.ts  director.test.ts  doctor-fix.test.ts  env.test.ts  errors.test.ts  help.test.ts  intelligence.test.ts  memory.test.ts  new-commands.test.ts  plain-errors.test.ts  plugin-runtime.test.ts  process-registry.test.ts  product-commands.test.ts  scanner.test.ts  setup-flow.test.ts  terminal-input.test.ts  tui-rendering.test.ts  tui.test.ts  util-shell.test.ts  verification-security.test.ts
tests/fixtures/chaos-python/: pyproject.toml
(+81 files in other folders)
