[project]
name = "chaos-python-project"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.ruff]
line-length = 88

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
